[package]
name = "eth-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["ws"] }

tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }

mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web = "4.0.1"
async-std = "1.12.0"
futures = "*"
actix-cors = "0.6.0"

eyre = "*"
thiserror = "1.0"
anyhow="*"



